--- a/towndeli/assets/less/main.less
+++ b/towndeli/assets/less/main.less
@@ -3016,15 +3016,33 @@ header.header {
                             color: #22b99b;
                         }
                     }
+                    &.shipping {
+                        .icon {
+                            position: absolute;
+                            width: 20px;
+                            height: 18px;
+                            background: url('../images/shipping.png');
+                        }
+                        .status {
+                            padding-left: 30px;
+                            color: #a6cd78;
+                        }
+                    }
                 }
             }
             .orders-flow {
-                min-height: 300px;
+                min-height: 250px;
                 background-color: #eee;
                 border-top: 1px solid #dcdcdc;
                 border-bottom: 1px solid #dcdcdc;
+                &.orders-flow-tracking-3 {
+                    min-height: 320px;
+                }
+                &.orders-flow-tracking-2 {
+                    min-height: 320px;
+                }
                 .top {
-                    height: 140px;
+                    height: 160px;
                     .content {
                         background-color:  #27b99b;
                         min-width: 235px;
@@ -3104,39 +3122,22 @@ header.header {
                     }
 
                     .content-step-2 {
-                        margin-left: 200px;
+                        margin-left: 20%;
                         max-width: 256px;
                         min-width: 235px;
                         min-height: 100px;
                         padding-right: 5px;
                         @media (max-width: 1200px) {
                             margin-left: 120px;
-                            &:before {
-                                margin-left: 60px !important;
-                            }
-                        }
-                        @media (max-width: 860px) {
-                            &:before {
-                                margin-left: 100px !important;
-                            }
                         }
                         @media (max-width: 768px) {
                             margin-left: 140px;
-                            &:before {
-                                margin-left: 50px !important;
-                            }
                         }
                         @media (max-width: 520px) {
                             margin-left: 100px;
-                            &:before {
-                                margin-left: 20px !important;
-                            }
                         }
                         @media (max-width: 420px) {
                             margin-left: 20px;
-                            &:before {
-                                margin-left: 50px !important;
-                            }
                         }
                         &:before {
                             content: '';
@@ -3144,7 +3145,7 @@ header.header {
                             width: 20px;
                             height: 20px;
                             margin-top: 100px;
-                            margin-left: 10px;
+                            margin-left: 45%;
                             background: url('../images/icon1.png') no-repeat;
                         }
 
@@ -3160,103 +3161,218 @@ header.header {
                             padding-top: 5px;
                         }
                     }
+
+                    .content-step-3 {
+                        margin-left: 45%;
+                        max-width: 270px;
+                        min-width: 235px;
+                        min-height: 100px;
+                        padding-right: 5px;
+                        @media (max-width: 1200px) {
+                            margin-left: 350px;
+                        }
+                        @media (max-width: 860px) {
+                            margin-left: 410px;
+                        }
+                        @media (max-width: 768px) {
+                            margin-left: 320px;
+                        }
+                        @media (max-width: 640px) {
+                            margin-left: 200px;
+                        }
+                        @media (max-width: 520px) {
+                            margin-left: 100px;
+                        }
+                        @media (max-width: 420px) {
+                            margin-left: 20px;
+                        }
+                        &:before {
+                            content: '';
+                            position: absolute;
+                            width: 20px;
+                            height: 20px;
+                            margin-top: 120px;
+                            margin-left: 45%;
+                            background: url('../images/icon1.png') no-repeat;
+                        }
+                        .shiper-avatar {
+                            position: absolute;
+                            padding-top: 10px;
+                        }
+                        .shiper-infor {
+                            float: right;
+                            padding-left: 50px;
+                            padding-top: 5px;
+                            .name {
+                                padding-left: 20px;
+                            }
+                            .phone {
+                                padding-left: 20px;
+                            }
+                            .location {
+                                padding-left: 20px;
+                            }
+                            .profile-icon {
+                                position: absolute;
+                                margin-top: 4px;
+                                width: 12px;
+                                height: 12px;
+                                background: url('../images/profile.png');
+                            }
+                            .phone-icon {
+                                position: absolute;
+                                margin-top: 2px;
+                                width: 9px;
+                                height: 15px;
+                                background: url('../images/phone.png');
+                            }
+                            .location-icon {
+                                position: absolute;
+                                margin-top: 4px;
+                                width: 11px;
+                                height: 14px;
+                                background: url('../images/location.png');
+                            }
+                        }
+                    }
                 }
                 .mid {
                     padding-bottom: 20px;
-                    .step-menu {
-                        .full-line {
-                            height: 10px;
-                            background-color:  #d9d9d9;
-                            width: 95%;
-                            margin-top: 15px;
-                            position: relative;
-                            margin-left: 5px;
-                        }
-                        .line-step2 {
-                            height: 10px;
-                            background-color:  #62a910;
-                            width: 22%;
-                            position: absolute;
-                            margin-left: 39px;
-                            z-index: 10;
-                            .circle {
-                                position: relative;
-                                border-radius: 50%;
-                                float: right;
-                                margin-right: -10px;
-                                margin-top: -2px;
-                                background-color:  #62a910;
-                                width: 15px;
-                                height: 15px;
-                            }
-                            @media (max-width: 420px) {
-                                width: 12%;
-                            }
-                        }
+                    .progress-wrapper {
                         position: relative;
-                        z-index: 1;
-                        padding: 0 10px;
-                        ul {
-                            list-style-position: inside;
-                            margin: 0;
-                            li {
-                                margin-top: -25px;
-                                display: inline-block;
-                                width: 33%;
-                                position: relative;
-                                .circle {
+                        margin: 0 20px;
+                        @media (max-width: 640px) {
+                            margin-right: 30px;
+                        }
+                        @media (max-width: 420px) {
+                            margin-right: 40px;
+                        }
+                        .progress {
+                            height: 10px;
+                            background-color: #d9d9d9;
+                            box-shadow: none;
+                            span {
+                                display: block;
+                            }
+                            .progress-bar {
+                                height: 10px;
+                                background-color:  #62a910;
+                                box-shadow: none;
+                                .node {
+                                    position: absolute;
+                                    margin-top: -2px;
+                                    width: 15px;
+                                    height: 15px;
                                     border-radius: 50%;
-                                    background-color:  #d9d9d9;
-                                    width: 40px;
-                                    height: 40px;
-                                    cursor: pointer;
-                                    i {
-                                        display: inline-block;
-                                        width: 40px;
-                                        height: 40px;
-                                    }
+                                    background-color:  #79c423;
                                 }
-                                &.active {
-                                    .circle {
+                            }
+                            .progress-bar-1 {
+                                width: 0%;
+                            }
+                            .progress-bar-2 {
+                                width: 27%;
+                                .node {
+                                    margin-left: 13%;
+                                }
+                            }
+                            .progress-bar-3 {
+                                width: 75%;
+                                .node {
+                                    margin-left: 36%;
+                                }
+                            }
+                            .one, .two, .three {
+                                position:absolute;
+                                .circle {
+                                    position:absolute;
+                                    margin-top:-15px;
+                                    z-index:1;
+                                    height:40px;
+                                    width:40px;
+                                    border-radius:25px;                                
+                                    background-color:  #d9d9d9;
+                                    cursor: pointer;
+                                    &.active {
                                         background-color:  #79c423;
                                     }
                                 }
-                                h4 {
-                                    color:  #000000;
-                                    font-size: 14px;
+                                .title {
+                                    margin-top: 40px;
+                                    position: absolute;
+                                    width: 150px;
                                     font-weight: 400;
-                                    line-height: 20px;
+                                    font-size: 14px;
                                 }
                             }
-                            .step1 {
-                                i {
-                                    background: url('../images/step1.png') no-repeat;
+                            .one{
+                                .icon {
+                                    position: absolute;
                                     margin: 10px 12px;
+                                    height:40px;
+                                    width:40px;
+                                    background: url('../images/step1.png') no-repeat;
                                 }
+                                left: -1%;
                             }
-                            .step2 {
-                                text-align: center;
+                            .two{
+                                left:46%;
+                                .icon {
+                                    position: absolute;
+                                    margin: 10px;
+                                    height:40px;
+                                    width:40px;
+                                    background: url('../images/step2.png') no-repeat;
+                                }
                                 .circle {
-                                    margin: auto;
-                                    i {
-                                        background: url('../images/step2.png') no-repeat;
-                                        margin: 10px;
-                                    }
-                                }
-                            }
-                            .step3 {
-                                position: absolute;
-                                .wrapper {
-                                    float: right;
-                                    .circle {
-                                        margin-left: 90px;
-                                        i {
-                                            background: url('../images/step3.png') no-repeat;
-                                            margin: 10px 12px;
+                                    &.active {
+                                        .icon {
+                                            background: url('../images/step2-active.png') no-repeat !important;
                                         }
                                     }
-                                    h4 {
+                                }
+                            }
+                            .three{
+                                left:95%;
+                                .circle {
+                                    .icon {
+                                        position: absolute;
+                                        margin: 13px;
+                                        height:40px;
+                                        width:40px;
+                                        background: url('../images/step3.png') no-repeat;
+                                    }
+                                    &.active {
+                                        .icon {
+                                            background: url('../images/step3-active.png') no-repeat !important;
+                                        }
+                                    }
+                                }
+                            }
+                            &.progress-tracking-1 {
+                                .three {
+                                    .titile-step-3 {
+                                        margin-left: -160px;
                                         text-align: right;
+                                        min-width: 200px;
+                                    }
+                                }
+                            }
+                            &.progress-tracking-2 {
+                                .three {
+                                    .titile-step-3 {
+                                        margin-left: -160px;
+                                        text-align: right;
+                                        min-width: 200px;
+                                    }
+                                }
+                            }
+                            &.progress-tracking-3 {
+                                .three {
+                                    .titile-step-3 {
+                                        margin-left: -160px;
+                                        text-align: right;
+                                        min-width: 200px;
                                     }
                                 }
                             }
@@ -3264,6 +3380,7 @@ header.header {
                     }
                 }
                 .bottom {
+                    padding-top: 20px;
                     padding-bottom: 20px;
                     color:  #666666;
                     font-size: 16px;
