--- a/towndeli/assets/styles/styles.css
+++ b/towndeli/assets/styles/styles.css
@@ -10290,14 +10290,30 @@ header.header .top-links li .child-box ul li a.highlight {
   padding-left: 20px;
   color: #22b99b;
 }
+.main .wrap-tracking .tracking-content .general-info .wrapper.shipping .icon {
+  position: absolute;
+  width: 20px;
+  height: 18px;
+  background: url('../images/shipping.png');
+}
+.main .wrap-tracking .tracking-content .general-info .wrapper.shipping .status {
+  padding-left: 30px;
+  color: #a6cd78;
+}
 .main .wrap-tracking .tracking-content .orders-flow {
-  min-height: 300px;
+  min-height: 250px;
   background-color: #eee;
   border-top: 1px solid #dcdcdc;
   border-bottom: 1px solid #dcdcdc;
 }
+.main .wrap-tracking .tracking-content .orders-flow.orders-flow-tracking-3 {
+  min-height: 320px;
+}
+.main .wrap-tracking .tracking-content .orders-flow.orders-flow-tracking-2 {
+  min-height: 320px;
+}
 .main .wrap-tracking .tracking-content .orders-flow .top {
-  height: 140px;
+  height: 160px;
 }
 .main .wrap-tracking .tracking-content .orders-flow .top .content {
   background-color: #27b99b;
@@ -10377,7 +10393,7 @@ header.header .top-links li .child-box ul li a.highlight {
   background: url('../images/icon1.png') no-repeat;
 }
 .main .wrap-tracking .tracking-content .orders-flow .top .content-step-2 {
-  margin-left: 200px;
+  margin-left: 20%;
   max-width: 256px;
   min-width: 235px;
   min-height: 100px;
@@ -10387,37 +10403,20 @@ header.header .top-links li .child-box ul li a.highlight {
   .main .wrap-tracking .tracking-content .orders-flow .top .content-step-2 {
     margin-left: 120px;
   }
-  .main .wrap-tracking .tracking-content .orders-flow .top .content-step-2:before {
-    margin-left: 60px !important;
-  }
-}
-@media (max-width: 860px) {
-  .main .wrap-tracking .tracking-content .orders-flow .top .content-step-2:before {
-    margin-left: 100px !important;
-  }
 }
 @media (max-width: 768px) {
   .main .wrap-tracking .tracking-content .orders-flow .top .content-step-2 {
     margin-left: 140px;
-  }
-  .main .wrap-tracking .tracking-content .orders-flow .top .content-step-2:before {
-    margin-left: 50px !important;
   }
 }
 @media (max-width: 520px) {
   .main .wrap-tracking .tracking-content .orders-flow .top .content-step-2 {
     margin-left: 100px;
   }
-  .main .wrap-tracking .tracking-content .orders-flow .top .content-step-2:before {
-    margin-left: 20px !important;
-  }
 }
 @media (max-width: 420px) {
   .main .wrap-tracking .tracking-content .orders-flow .top .content-step-2 {
     margin-left: 20px;
-  }
-  .main .wrap-tracking .tracking-content .orders-flow .top .content-step-2:before {
-    margin-left: 50px !important;
   }
 }
 .main .wrap-tracking .tracking-content .orders-flow .top .content-step-2:before {
@@ -10426,7 +10425,7 @@ header.header .top-links li .child-box ul li a.highlight {
   width: 20px;
   height: 20px;
   margin-top: 100px;
-  margin-left: 10px;
+  margin-left: 45%;
   background: url('../images/icon1.png') no-repeat;
 }
 .main .wrap-tracking .tracking-content .orders-flow .top .content-step-2 .home-icon {
@@ -10440,107 +10439,228 @@ header.header .top-links li .child-box ul li a.highlight {
   padding-left: 20px;
   padding-top: 5px;
 }
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 {
+  margin-left: 45%;
+  max-width: 270px;
+  min-width: 235px;
+  min-height: 100px;
+  padding-right: 5px;
+}
+@media (max-width: 1200px) {
+  .main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 {
+    margin-left: 350px;
+  }
+}
+@media (max-width: 860px) {
+  .main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 {
+    margin-left: 410px;
+  }
+}
+@media (max-width: 768px) {
+  .main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 {
+    margin-left: 320px;
+  }
+}
+@media (max-width: 640px) {
+  .main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 {
+    margin-left: 200px;
+  }
+}
+@media (max-width: 520px) {
+  .main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 {
+    margin-left: 100px;
+  }
+}
+@media (max-width: 420px) {
+  .main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 {
+    margin-left: 20px;
+  }
+}
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-3:before {
+  content: '';
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  margin-top: 120px;
+  margin-left: 45%;
+  background: url('../images/icon1.png') no-repeat;
+}
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 .shiper-avatar {
+  position: absolute;
+  padding-top: 10px;
+}
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 .shiper-infor {
+  float: right;
+  padding-left: 50px;
+  padding-top: 5px;
+}
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 .shiper-infor .name {
+  padding-left: 20px;
+}
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 .shiper-infor .phone {
+  padding-left: 20px;
+}
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 .shiper-infor .location {
+  padding-left: 20px;
+}
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 .shiper-infor .profile-icon {
+  position: absolute;
+  margin-top: 4px;
+  width: 12px;
+  height: 12px;
+  background: url('../images/profile.png');
+}
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 .shiper-infor .phone-icon {
+  position: absolute;
+  margin-top: 2px;
+  width: 9px;
+  height: 15px;
+  background: url('../images/phone.png');
+}
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 .shiper-infor .location-icon {
+  position: absolute;
+  margin-top: 4px;
+  width: 11px;
+  height: 14px;
+  background: url('../images/location.png');
+}
 .main .wrap-tracking .tracking-content .orders-flow .mid {
   padding-bottom: 20px;
 }
-.main .wrap-tracking .tracking-content .orders-flow .mid .step-menu {
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper {
   position: relative;
-  z-index: 1;
-  padding: 0 10px;
+  margin: 0 20px;
 }
-.main .wrap-tracking .tracking-content .orders-flow .mid .step-menu .full-line {
-  height: 10px;
-  background-color: #d9d9d9;
-  width: 95%;
-  margin-top: 15px;
-  position: relative;
-  margin-left: 5px;
-}
-.main .wrap-tracking .tracking-content .orders-flow .mid .step-menu .line-step2 {
-  height: 10px;
-  background-color: #62a910;
-  width: 22%;
-  position: absolute;
-  margin-left: 39px;
-  z-index: 10;
-}
-.main .wrap-tracking .tracking-content .orders-flow .mid .step-menu .line-step2 .circle {
-  position: relative;
-  border-radius: 50%;
-  float: right;
-  margin-right: -10px;
-  margin-top: -2px;
-  background-color: #62a910;
-  width: 15px;
-  height: 15px;
-}
-@media (max-width: 420px) {
-  .main .wrap-tracking .tracking-content .orders-flow .mid .step-menu .line-step2 {
-    width: 12%;
+@media (max-width: 640px) {
+  .main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper {
+    margin-right: 30px;
   }
 }
-.main .wrap-tracking .tracking-content .orders-flow .mid .step-menu ul {
-  list-style-position: inside;
-  margin: 0;
+@media (max-width: 420px) {
+  .main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper {
+    margin-right: 40px;
+  }
 }
-.main .wrap-tracking .tracking-content .orders-flow .mid .step-menu ul li {
-  margin-top: -25px;
-  display: inline-block;
-  width: 33%;
-  position: relative;
-}
-.main .wrap-tracking .tracking-content .orders-flow .mid .step-menu ul li .circle {
-  border-radius: 50%;
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress {
+  height: 10px;
   background-color: #d9d9d9;
-  width: 40px;
-  height: 40px;
-  cursor: pointer;
+  box-shadow: none;
 }
-.main .wrap-tracking .tracking-content .orders-flow .mid .step-menu ul li .circle i {
-  display: inline-block;
-  width: 40px;
-  height: 40px;
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress span {
+  display: block;
 }
-.main .wrap-tracking .tracking-content .orders-flow .mid .step-menu ul li.active .circle {
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .progress-bar {
+  height: 10px;
+  background-color: #62a910;
+  box-shadow: none;
+}
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .progress-bar .node {
+  position: absolute;
+  margin-top: -2px;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
   background-color: #79c423;
 }
-.main .wrap-tracking .tracking-content .orders-flow .mid .step-menu ul li h4 {
-  color: #000000;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 20px;
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .progress-bar-1 {
+  width: 0%;
 }
-.main .wrap-tracking .tracking-content .orders-flow .mid .step-menu ul .step1 i {
-  background: url('../images/step1.png') no-repeat;
-  margin: 10px 12px;
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .progress-bar-2 {
+  width: 27%;
 }
-.main .wrap-tracking .tracking-content .orders-flow .mid .step-menu ul .step2 {
-  text-align: center;
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .progress-bar-2 .node {
+  margin-left: 13%;
 }
-.main .wrap-tracking .tracking-content .orders-flow .mid .step-menu ul .step2 .circle {
-  margin: auto;
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .progress-bar-3 {
+  width: 75%;
 }
-.main .wrap-tracking .tracking-content .orders-flow .mid .step-menu ul .step2 .circle i {
-  background: url('../images/step2.png') no-repeat;
-  margin: 10px;
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .progress-bar-3 .node {
+  margin-left: 36%;
 }
-.main .wrap-tracking .tracking-content .orders-flow .mid .step-menu ul .step3 {
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .one,
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .two,
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .three {
   position: absolute;
 }
-.main .wrap-tracking .tracking-content .orders-flow .mid .step-menu ul .step3 .wrapper {
-  float: right;
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .one .circle,
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .two .circle,
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .three .circle {
+  position: absolute;
+  margin-top: -15px;
+  z-index: 1;
+  height: 40px;
+  width: 40px;
+  border-radius: 25px;
+  background-color: #d9d9d9;
+  cursor: pointer;
 }
-.main .wrap-tracking .tracking-content .orders-flow .mid .step-menu ul .step3 .wrapper .circle {
-  margin-left: 90px;
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .one .circle.active,
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .two .circle.active,
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .three .circle.active {
+  background-color: #79c423;
 }
-.main .wrap-tracking .tracking-content .orders-flow .mid .step-menu ul .step3 .wrapper .circle i {
-  background: url('../images/step3.png') no-repeat;
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .one .title,
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .two .title,
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .three .title {
+  margin-top: 40px;
+  position: absolute;
+  width: 150px;
+  font-weight: 400;
+  font-size: 14px;
+}
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .one {
+  left: -1%;
+}
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .one .icon {
+  position: absolute;
   margin: 10px 12px;
+  height: 40px;
+  width: 40px;
+  background: url('../images/step1.png') no-repeat;
 }
-.main .wrap-tracking .tracking-content .orders-flow .mid .step-menu ul .step3 .wrapper h4 {
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .two {
+  left: 46%;
+}
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .two .icon {
+  position: absolute;
+  margin: 10px;
+  height: 40px;
+  width: 40px;
+  background: url('../images/step2.png') no-repeat;
+}
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .two .circle.active .icon {
+  background: url('../images/step2-active.png') no-repeat !important;
+}
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .three {
+  left: 95%;
+}
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .three .circle .icon {
+  position: absolute;
+  margin: 13px;
+  height: 40px;
+  width: 40px;
+  background: url('../images/step3.png') no-repeat;
+}
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .three .circle.active .icon {
+  background: url('../images/step3-active.png') no-repeat !important;
+}
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress.progress-tracking-1 .three .titile-step-3 {
+  margin-left: -160px;
   text-align: right;
+  min-width: 200px;
+}
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress.progress-tracking-2 .three .titile-step-3 {
+  margin-left: -160px;
+  text-align: right;
+  min-width: 200px;
+}
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress.progress-tracking-3 .three .titile-step-3 {
+  margin-left: -160px;
+  text-align: right;
+  min-width: 200px;
 }
 .main .wrap-tracking .tracking-content .orders-flow .bottom {
+  padding-top: 20px;
   padding-bottom: 20px;
   color: #666666;
   font-size: 16px;
